Source/WebCore/html/canvas/WebGLShader.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2009 Apple Inc. All rights reserved.
+ * Copyright (C) 2009, 2013 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -43,6 +43,7 @@ WebGLShader::WebGLShader(WebGLRenderingContext* ctx, GC3Denum type)
     : WebGLSharedObject(ctx)
     , m_type(type)
     , m_source("")
+    , m_isValid(false)
 {
     setObject(ctx->graphicsContext3D()->createShader(type));
 }
